@@ -61,7 +61,7 @@
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
-        <version>1.7.25</version>
+        <version>1.7.30</version>
       </dependency>
       <dependency>
         <groupId>ch.qos.logback</groupId>
@@ -76,27 +76,27 @@
       <dependency>
         <groupId>org.zeroturnaround</groupId>
         <artifactId>zt-exec</artifactId>
-        <version>1.10</version>
+        <version>1.12</version>
       </dependency>
       <dependency>
         <groupId>info.picocli</groupId>
         <artifactId>picocli</artifactId>
-        <version>4.0.4</version>
+        <version>4.6.1</version>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
-        <version>2.9.10.5</version>
+        <version>2.12.1</version>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-core</artifactId>
-        <version>2.9.10</version>
+        <version>2.12.1</version>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-annotations</artifactId>
-        <version>2.9.9</version>
+        <version>2.12.1</version>
       </dependency>
       <dependency>
         <groupId>org.apache.httpcomponents</groupId>
@@ -106,7 +106,7 @@
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
-        <version>3.9</version>
+        <version>3.11</version>
       </dependency>
       <dependency>
         <groupId>commons-io</groupId>
@@ -116,12 +116,12 @@
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-compress</artifactId>
-        <version>1.19</version>
+        <version>1.20</version>
       </dependency>
       <dependency>
         <groupId>org.goots</groupId>
         <artifactId>exploder</artifactId>
-        <version>0.4</version>
+        <version>0.5</version>
       </dependency>
       <dependency>
         <groupId>org.goots</groupId>
@@ -160,7 +160,7 @@
       <dependency>
         <groupId>org.jboss.byteman</groupId>
         <artifactId>byteman-bmunit</artifactId>
-        <version>4.0.3</version>
+        <version>4.0.13</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -332,6 +332,10 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
+          <argLine>-Djdk.attach.allowAttachSelf -Dorg.jboss.byteman.transform.all=true</argLine>
+          <additionalClasspathElements>
+            <additionalClasspathElement>${java.home}/../lib/tools.jar</additionalClasspathElement>
+          </additionalClasspathElements>
           <excludes>
             <exclude>**/SourceClearTest.java</exclude>
           </excludes>
